[package]
name = "grammarbot2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
poise = "0.5.5"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.29.1", features = ["full", "macros", "rt-multi-thread"] }
